--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed": "prisma db seed --schema=prisma/schema.prisma"
   },
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -16,7 +18,11 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "prisma": "^6.13.0",
     "tailwindcss": "^3.4.10",
     "vite": "^5.3.4"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.mjs"
   }
 }
