--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "concurrently \"npm:dev:backend\" \"npm:dev:frontend\"",
     "dev:backend": "npm --prefix backend run dev",
     "dev:frontend": "npm --prefix frontend run dev",
-    "build": "npm --prefix frontend run build",
+    "build": "npm --prefix backend run prisma:generate && npm --prefix frontend run build",
     "start": "concurrently \"npm --prefix backend run start\" \"npm --prefix frontend run preview\""
   },
   "devDependencies": {
