Changed vercel.json again

--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "use": "@vercel/static-build"
     },
     {
       "src": "backend/server.js",
@@ -12,7 +11,6 @@
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "backend/server.js" },
-    { "source": "/(.*)", "destination": "index.html" }
+    { "source": "/api/(.*)", "destination": "backend/server.js" }
   ]
 }
