--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,9 @@
     }
   ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "backend/server.js" }
+    {
+      "source": "/api/(.*)",
+      "destination": "backend/server.js"
+    }
   ]
 }
